# gnostr-clean

./: .justfile  Cargo.toml  GNUmakefile  Makefile  build.rs  dist-workspace.toml  install_script.sh  plan-dist-manifest.json  simulated-release.patch
.github/workflows/: ci.yml  release.yml
src/: cleaner.rs  git_service.rs  git_util.rs  lib.rs  main.rs  models.rs  options.rs
src/cleaner/: cargo.rs  git.rs  gnostr.rs  macos.rs  makefile.rs  node.rs  rustup.rs
