[package]
name = "gitr"
version = "0.1.2" # remember to update html_root_url
authors = ["gnostr gnostr@gnostr.org", "Isaac Whitfield <iw@whitfin.io>"]
description = "Quickly clean up your development directories on disk"
repository = "https://github.com/gnostr-org/gitr"
keywords = ["backup", "compression", "clean"]
categories = ["algorithms", "command-line-utilities", "filesystem"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
assert_cmd = "2.0.10"
chrono = "0.4"
clap = { version = "4.2.4", features = ["derive"] }
git2 = "0.17.1"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3.2.0"
toml = "0.7.3"
walkdir = "2.3.2"
