[package]
name = "gnostr-clean"
version = "0.0.3" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Quickly clean up your development directories on disk"
repository = "https://github.com/gnostr-org/gnostr-clean"
homepage = "https://github.com/gnostr-org/gnostr-clean"
keywords = ["backup", "compression", "clean"]
categories = ["algorithms", "command-line-utilities", "filesystem"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33"
walkdir = "2.2"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
